# Kasva

./: README.md  control_lane.py
kasva_description/: CMakeLists.txt
oto_sensor/: CMakeLists.txt  package.xml
oto_sensor/launch/: load_map.launch  load_map2.launch  load_map3.launch  start_simulation.launch
oto_sensor/models/bariyerler/: model.sdf
oto_sensor/models/isaretler/azami_20/: model.config  model.sdf
oto_sensor/models/isaretler/azami_30/: model.config  model.sdf
oto_sensor/models/isaretler/course/: model.sdf
oto_sensor/models/isaretler/dur/: model.config  model.sdf
oto_sensor/models/isaretler/durak/: model.config  model.sdf
oto_sensor/models/isaretler/fazlalık/: insallah _son.world  tamamlanmis2
oto_sensor/models/isaretler/giris_olmayan_yol/: model.config  model.sdf
oto_sensor/models/isaretler/hiz_son_20/: model.config  model.sdf
oto_sensor/models/isaretler/ileri_sag_yon/: model.config  model.sdf
oto_sensor/models/isaretler/ileri_sol_yon/: model.config  model.sdf
oto_sensor/models/isaretler/park_etmek_yasaktir/: model.config  model.sdf
oto_sensor/models/isaretler/park_yeri/: model.config  model.sdf
oto_sensor/models/isaretler/sag_yon/: model.config  model.sdf
oto_sensor/models/map/: model.sdf
oto_sensor/scripts/: assign_signs.py  assign_signs_calisan.py  detect_lane  detect_lane.py  detect_sign.py  traffic_sign.py
oto_sensor/worlds/: harita.world  harita2.world  simulasyon.world  yarisma_haritasi.world  yarisma_haritasi2.world  yarisma_haritasi3.world  yarisma_haritasi4.world  yarisma_haritasi5.world  yarisma_haritasi6.world
(+31 files in other folders)
